--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cd api && npm start",
-    "startApp": "react-scripts start",
+    "start": "npm start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
