--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "main": "",
     "scripts": {
-        "start": "npm start --prefix server",
+        "start": "npm start --prefix api",
         "install-client": "cd client && npm install && npm run build && cd ..",
-        "install-server": "cd server && npm install && cd .. ",
+        "install-server": "cd api && npm install && cd .. ",
         "heroku-postbuild": "npm run install-client && npm run install-server"
     }
 }
