--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
