--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
